--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,11 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
         "automattic/woocommerce": "^3.0",
         "devfaysal/laravel-bangladesh-geocode": "^2.0",
-        "filament/filament": "^3.0-stable",
-        "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^10.10",
+        "filament/filament": "^3.0",
+        "laravel/framework": "^11.0",
         "laravel/tinker": "^2.8",
         "psr/simple-cache": "^2.0",
         "pxlrbt/filament-excel": "^2.1"
@@ -22,9 +21,8 @@
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^7.0",
-        "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0"
+        "nunomaduro/collision": "^8.1",
+        "phpunit/phpunit": "^11.0.1"
     },
     "autoload": {
         "psr-4": {
